@@ -1,50 +1,3 @@
----
-layout: post
-title: Apache与Tomcat服务器集成和集群配置
-description: "Apache与Tomcat服务器集成和集群配置,通过mod_jk的方式进行Tomcat和Apache的集成"
-modified: 2016-07-11 15:20:20
-tags: [Apache,Apache Server,Tomcat]
-post_type: developer
-categories: [Apache]
-image:
-  feature: posts_header/abstract-7.jpg
-  credit:
-  creditlink:
----
-
-
-## 一、集成原因
-
-Tomcat的功能分为以下两个主要部分：
-
-- 提供Servlet/JSP容器
-- 向客户端提供静态资源(HTML或图像等)的响应
-
-在提供静态资源响应的功能方面，Tomcat都远不如专业的HTTP服务器，如Apache服务器，Nginx等。
-因此，实际应用中，经常让Tomcat只作为Servlet/JSP的容器，而提供静态资源响应的功能则交给专业的HTTP服务器来完成。
-还有在高并发的情况下，单个的Tomcat无法提供大量的http请求，需要使用Apache分发到多个Tomcat组成的集群，这样达到更大并发性的效果。
-
-
-## 二、集成原理
-
-1、Tomcat服务器是通过Connector连接器组件与客户端程序建立连接，它负责接收客户端的请求，并把Tomcat服务器的响应结果发送给客户端。在server.xml中默认存在以下2个连接器组件：
-
-```xml
-<Connector port="8080" protocol="HTTP/1.1" connectionTimeout="20000" redirectPort="8443" />
-
-<!-- Define an AJP 1.3 Connector on port 8009 -->
-<Connector port="8009" protocol="AJP/1.3" redirectPort="8443" />
-```
-
-第一个连接器是HTTP连接器，监听8080端口，负责建立HTTP链接。在使用Tomcat作为HTTP服务器时就是用的该连接器。
-
-第二个连接器是AJP连接器，监听8009端口，负责和其它的HTTP服务器建立连接。与其它服务器集成时就是用到这个连接器。
-
-
-2、JK插件
-
-Tomcat提供了专门的JK插件来负责与其它HTTP服务器的通信，该插件需要安置在对应的HTTP服务器上，它根据预先配置好的URL映射信息，决定是否把客户请求转发给Tomcat服务器。
-
 
 ## 三、环境
 
@@ -70,7 +23,7 @@ yum install apr apr-util pcre-devel openssl-devel
 ```
 tar -zxvf apr-1.5.2.tar.gz
 cd apr-1.5.2
-./configure --prefix=/staples/apr
+./configure --prefix=/snow/apr
 make && make install
 ```
 
@@ -84,7 +37,7 @@ make && make install
 ```
 tar -zxvf apr-util-1.5.4.tar.gz
 cd apr-util-1.5.4
-./configure --prefix=/staples/apr-util --with-apr=/staples/apr/
+./configure --prefix=/snow/apr-util --with-apr=/snow/apr/
 make && make install
 ```
 
@@ -97,9 +50,9 @@ make && make install
 
 ```bash
 ./configure                           \
-       --with-apr=/staples/apr           \
-       --with-apr-util=/staples/apr-util \
-       --prefix=/staples/apachehttpd \
+       --with-apr=/snow/apr           \
+       --with-apr-util=/snow/apr-util \
+       --prefix=/snow/apachehttpd \
        --enable-so                \
        --enable-ssl               \
        --enable-cgi               \
@@ -110,7 +63,7 @@ make && make install
        --enable-modules=most      \
        --enable-mpms-shared=all
 
-
+make && make install
 ```
 
 ### 3.mod_jk 插件安装
@@ -126,30 +79,30 @@ tar -zxvf tomcat-connectors-1.2.41-src.tar.gz
 cd tomcat-connectors-1.2.41-src/
 cd native/
 
-./configure --with-apxs=/staples/apachehttpd/bin/apxs
+./configure --with-apxs=/snow/apachehttpd/bin/apxs
 #这里指定的是apache安装目录中apxs的位置，这个apxs方便我们动态加载模块
 
-make
+make && make install
 
 # 将mod_jk.so文件复制到apache的modules文件夹下
-cp apache-2.0/mod_jk.so /staples/apachehttpd/modules/
+cp apache-2.0/mod_jk.so /snow/apachehttpd/modules/
 
 ```
 
 ### 4.Apache Server配置文件
 
-在`/staples/apachehttpd/conf`下面建立两个配置文件`mod_jk.conf`和`workers.properties`。
+在`/snow/apachehttpd/conf`下面建立两个配置文件`mod_jk.conf`和`workers.properties`。
 
 ```bash
-# vi mod_jk.conf
+# vim mod_jk.conf
 
 # 添加以下内容：
 
 # 指出mod_jk模块工作所需要的工作文件workers.properties的位置
-JkWorkersFile /staples/apachehttpd/conf/workers.properties
+JkWorkersFile /snow/apachehttpd/conf/workers.properties
 
 # Where to put jk logs
-JkLogFile /staples/apachehttpd/logs/mod_jk.log
+JkLogFile /snow/apachehttpd/logs/mod_jk.log
 
 # Set the jk log level[debug/error/info]
 JkLogLevel info
@@ -173,7 +126,7 @@ JkMount /* loadbalancer
 
 
 ```bash
-# vi workers.properties
+# vim workers.properties
 # 添加以下内容：
 
 worker.list=worker1,worker2,loadbalancer
@@ -212,10 +165,81 @@ worker.loadbalancer.sticky_session_force=true
 
 ```apache
 LoadModule jk_module modules/mod_jk.so
-Include /staples/apachehttpd/conf/mod_jk.conf
+Include /snow/apachehttpd/conf/mod_jk.conf
 ```
 
-### 5.Tomcat配置
+### 5.Tomcat安装与配置
+
+```bash
+tar -zxvf apache-tomcat-7.0.65.tar.gz
+cd apache-tomcat-7.0.65/
+
+# 安装tomcat-native（不用单独下载，在tomcat的bin目录中自带）
+
+cd bin/
+tar -zxvf tomcat-native.tar.gz
+cd tomcat-native-1.1.33-src/jni/native/
+./configure                                         \
+      --with-apr=/snwo/apr/bin/apr-1-config    \
+      --with-ssl                                    \
+      --with-java-home=/snwo/jdk1.7.0_79
+
+make && make install
+```
+
+tomcat默认参数是为开发环境制定，而非适合生产环境，尤其是内存和线程的配置，默认都很低，容易成为性能瓶颈。下面是一些配置示例，需要根据实际需要更改。
+
+```
+vim bin/setenv.sh
+
+
+JAVA_OPTS="-XX:PermSize=128M -XX:MaxPermSize=256M -Xms1536M -Xmx2048M -verbosegc "
+CATALINA_OPTS="-Dcom.sun.management.jmxremote.port=7091 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Djava.rmi.server.hostname=192.168.10.100"
+JAVA_HOME="/snwo/jdk1.7.0_79"
+CATALINA_OPTS="$CATALINA_OPTS -Djava.library.path=/snwo/apr/lib"
+
+chmod 755 bin/setenv.sh
+
+```
+
+bin目录下新建的可执行文件setenv.sh会由tomcat自动调用。上面的jmxremote.authenticate在正式环境中请务必设为true并设置用户名/密码，减少安全隐患，或者注释掉CATALINA_OPTS。（有时候出于性能调优的目的，才需要设置JMX）。对于具体的连接协议有不同的优化属性，参考如下：
+
+对HTTP：
+
+```xml
+<Connector port="8080"
+           protocol="org.apache.coyote.http11.Http11NioProtocol"
+           URIEncoding="UTF-8"
+           enableLookups="false"
+
+           maxThreads="400"
+           minSpareTheads="50"   
+           acceptCount="400"
+           acceptorThreadCount="2"              
+           connectionTimeout="30000"
+           disableUploadTimeout="true"
+
+           compression="on"
+           compressionMinSize="2048"
+           maxHttpHeaderSize="16384"
+           redirectPort="8443"
+ />
+```
+
+对AJP：
+
+```xml
+<Connector port="8009"
+           protocol="AJP/1.3"
+           maxThreads="300"
+           minSpareThreads="50"
+           connectionTimeout="30000"
+           keepAliveTimeout="30000"
+           acceptCount="200"
+           URIEncoding="UTF-8"
+           enableLookups="false"
+           redirectPort="8443" />
+```
 
 
 修改Tomcat的`conf/server.xml`文件中的AJP连接器的端口，确保它们和`workers.properties`文件中的配置对应。此外，在使用了loadbalancer后，要求`worker`的名字和Tomcat的`server.xml`文件中的`<Engine>`元素的`jvmRoute`属性一致
@@ -249,12 +273,51 @@ Tomcat修改如下：
 
 ```xml
 
-<Context path="" docBase="/var/wwwroot" debug="0" reloadable="true" crossContext="true"/>
+<Context path="" docBase="/apps/testapp/TEST" debug="0" reloadable="true" crossContext="true"/>
 
 ```
 
-在`/var/wwwroot`下建立一个`index.jsp`，启动Apache和Tomcat，用浏览器访问`http://localhost:80/`，应该可以看到正确的页面了。
+在`/apps/testapp/TEST`下建立一个`index.jsp`，启动Apache和Tomcat，用浏览器访问`http://localhost:80/`，应该可以看到正确的页面了。
 
+index.jsp内容如下：
+
+```java
+<%@ page contentType="text/html; charset=UTF-8" %>
+<%@ page import="java.util.*" %>
+<html><head><title>Cluster App Test</title></head>
+<body>
+Server Info:
+<%
+out.println(request.getLocalAddr() + " : " + request.getLocalPort()+"<br>");%>
+<%
+  out.println("<br> ID " + session.getId()+"<br>");
+  // 如果有新的 Session 属性设置
+  String dataName = request.getParameter("dataName");
+  if (dataName != null && dataName.length() > 0) {
+     String dataValue = request.getParameter("dataValue");
+     session.setAttribute(dataName, dataValue);
+  }
+  out.println("<b>Session 列表</b><br>");
+  System.out.println("============================");
+  Enumeration e = session.getAttributeNames();
+  while (e.hasMoreElements()) {
+     String name = (String)e.nextElement();
+     String value = session.getAttribute(name).toString();
+     out.println( name + " = " + value+"<br>");
+         System.out.println( name + " = " + value);
+   }
+%>
+  <form action="test.jsp" method="POST">
+    CRM <br>
+    名称:<input type=text size=20 name="dataName">
+     <br>
+    值:<input type=text size=20 name="dataValue">
+     <br>
+    <input type=submit>
+   </form>
+</body>
+</html>
+```
 
 
 
